[gd_scene load_steps=12 format=2]

[ext_resource path="res://Code/menu_pause.gd" type="Script" id=1]
[ext_resource path="res://Sprites/GUI/menu_pause_spritesheet.png" type="Texture" id=2]
[ext_resource path="res://Sprites/GUI/MENU.png" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.219608, 0.498039, 0.792157, 0.67451 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.219608, 0.498039, 0.792157, 0.67451 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.219608, 0.498039, 0.792157, 0.67451 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.219608, 0.498039, 0.792157, 0.67451 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.219608, 0.498039, 0.792157, 0.67451 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.219608, 0.498039, 0.792157, 0.67451 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.776471, 0.254902, 0.254902, 0.67451 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.776471, 0.254902, 0.254902, 0.67451 )

[node name="menu_pause" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -683.0
margin_top = -384.0
margin_right = 683.0
margin_bottom = 384.0
color = Color( 0, 0, 0, 0.752941 )

[node name="Button_pause" type="Node" parent="."]

[node name="Button_resume" type="Button" parent="Button_pause"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -241.118
margin_top = 135.647
margin_right = 22.4719
margin_bottom = 192.647
rect_scale = Vector2( 1.7, 1.7 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="RESUME" type="Sprite" parent="Button_pause/Button_resume"]
position = Vector2( 142.5, 28.5 )
texture = ExtResource( 2 )
vframes = 3
frame = 2

[node name="Button_restart" type="Button" parent="Button_pause"]
margin_left = 432.649
margin_top = 294.154
margin_right = 715.649
margin_bottom = 349.154
rect_scale = Vector2( 1.7, 1.7 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="RESTART" type="Sprite" parent="Button_pause/Button_restart"]
position = Vector2( 142.92, 27.31 )
texture = ExtResource( 2 )
vframes = 3
frame = 1

[node name="Button_menu" type="Button" parent="Button_pause"]
margin_left = 509.001
margin_top = 466.609
margin_right = 575.851
margin_bottom = 486.609
rect_scale = Vector2( 4.2, 4.2 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="MENU" type="Sprite" parent="Button_pause/Button_menu"]
position = Vector2( 33.705, 10.17 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Button_quit" type="Button" parent="."]
margin_left = 545.222
margin_top = 630.231
margin_right = 683.022
margin_bottom = 684.411
rect_scale = Vector2( 1.5, 1.5 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="QUIT" type="Sprite" parent="Button_quit"]
position = Vector2( 144.5, 27.255 )
z_index = 1
texture = ExtResource( 2 )
vframes = 3
[connection signal="pressed" from="Button_pause/Button_resume" to="." method="_on_Button_resume_pressed"]
[connection signal="pressed" from="Button_pause/Button_restart" to="." method="_on_Button_restart_pressed"]
[connection signal="pressed" from="Button_pause/Button_menu" to="." method="_on_Button_menu_pressed"]
[connection signal="pressed" from="Button_quit" to="." method="_on_Button_quit_pressed"]
